--- a/css/style.css
+++ b/css/style.css
@@ -56,10 +56,20 @@
 }
 
 
+.jumbotron {
+  background: transparent;
+}
 
 #competencesContainterFluid {
   position: relative;
   min-height: 600px;
+  /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#e1f2c4+0,e3f2ca+26,dbf6b0+79,dbfaa6+100 */
+background: #e1f2c4; /* Old browsers */
+background: -moz-linear-gradient(left,  #e1f2c4 0%, #e3f2ca 26%, #dbf6b0 79%, #dbfaa6 100%); /* FF3.6-15 */
+background: -webkit-linear-gradient(left,  #e1f2c4 0%,#e3f2ca 26%,#dbf6b0 79%,#dbfaa6 100%); /* Chrome10-25,Safari5.1-6 */
+background: linear-gradient(to right,  #e1f2c4 0%,#e3f2ca 26%,#dbf6b0 79%,#dbfaa6 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e1f2c4', endColorstr='#dbfaa6',GradientType=1 ); /* IE6-9 */
+
 }
 
 #competencesContainterFluid:before {
@@ -70,9 +80,11 @@
     width: 100%;
     height: 100%;
     z-index: 1;
-    opacity: 0.2;
-    background-color: rgba(255, 0, 0, 0.5);
-    background-repeat: no-repeat;
+    opacity: 0.5;
+
+
+
+
     background-position: 50% 0;
     -ms-background-size: cover;
     -o-background-size: cover;
@@ -204,4 +216,9 @@ html {
        width:320px;
        height:240px;
     margin: 0 auto;
-     }
+}
+
+.margin-shifted{
+  margin-top: 15px;
+  margin-bottom: 15px
+}
