--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,3 @@
-
-
 #background {
     position: fixed;
     top: 0;
@@ -11,12 +9,12 @@
     background-attachment: fixed;
     background-size: 100%;
     opacity: 0.1;
-    filter:alpha(opacity=10);
+    filter: alpha(opacity=10);
 }
 
 #starterContainterFluid {
-  position: relative;
-  min-height: 500px;
+    position: relative;
+    min-height: 500px;
 }
 
 #starterContainterFluid:after {
@@ -35,6 +33,7 @@
     -webkit-background-size: cover;
     background-size: cover;
 }
+
 #starterContainterFluid:before {
     display: block;
     position: absolute;
@@ -52,24 +51,26 @@
     -moz-background-size: cover;
     -webkit-background-size: cover;
     background-size: cover;
-
 }
 
-
-.jumbotron {
-  background: transparent;
+.transparent {
+    background: transparent;
 }
 
 #competencesContainterFluid {
-  position: relative;
-  min-height: 600px;
-  /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#e1f2c4+0,e3f2ca+26,dbf6b0+79,dbfaa6+100 */
-background: #e1f2c4; /* Old browsers */
-background: -moz-linear-gradient(left,  #e1f2c4 0%, #e3f2ca 26%, #dbf6b0 79%, #dbfaa6 100%); /* FF3.6-15 */
-background: -webkit-linear-gradient(left,  #e1f2c4 0%,#e3f2ca 26%,#dbf6b0 79%,#dbfaa6 100%); /* Chrome10-25,Safari5.1-6 */
-background: linear-gradient(to right,  #e1f2c4 0%,#e3f2ca 26%,#dbf6b0 79%,#dbfaa6 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e1f2c4', endColorstr='#dbfaa6',GradientType=1 ); /* IE6-9 */
-
+    position: relative;
+    min-height: 600px;
+    /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#e1f2c4+0,e3f2ca+26,dbf6b0+79,dbfaa6+100 */
+    background: #e1f2c4;
+    /* Old browsers */
+    background: -moz-linear-gradient(left, #e1f2c4 0%, #e3f2ca 26%, #dbf6b0 79%, #dbfaa6 100%);
+    /* FF3.6-15 */
+    background: -webkit-linear-gradient(left, #e1f2c4 0%, #e3f2ca 26%, #dbf6b0 79%, #dbfaa6 100%);
+    /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to right, #e1f2c4 0%, #e3f2ca 26%, #dbf6b0 79%, #dbfaa6 100%);
+    /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e1f2c4', endColorstr='#dbfaa6', GradientType=1);
+    /* IE6-9 */
 }
 
 #competencesContainterFluid:before {
@@ -81,10 +82,6 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e1f2c4', end
     height: 100%;
     z-index: 1;
     opacity: 0.5;
-
-
-
-
     background-position: 50% 0;
     -ms-background-size: cover;
     -o-background-size: cover;
@@ -94,8 +91,16 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e1f2c4', end
 }
 
 #servicesContainterFluid {
-  position: relative;
-  min-height: 600px;
+    position: relative;
+    min-height: 800px;
+    background: rgba(50, 255, 18, 0.13);
+    background: -moz-linear-gradient(left, rgba(50, 255, 18, 0.13) 0%, rgba(197, 243, 155, 1) 100%);
+    background: -webkit-gradient(left top, right top, color-stop(0%, rgba(50, 255, 18, 0.13)), color-stop(100%, rgba(197, 243, 155, 1)));
+    background: -webkit-linear-gradient(left, rgba(50, 255, 18, 0.13) 0%, rgba(197, 243, 155, 1) 100%);
+    background: -o-linear-gradient(left, rgba(50, 255, 18, 0.13) 0%, rgba(197, 243, 155, 1) 100%);
+    background: -ms-linear-gradient(left, rgba(50, 255, 18, 0.13) 0%, rgba(197, 243, 155, 1) 100%);
+    background: linear-gradient(to right, rgba(50, 255, 18, 0.13) 0%, rgba(197, 243, 155, 1) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#32ff12', endColorstr='#c5f39b', GradientType=1);
 }
 
 #servicesContainterFluid:before {
@@ -107,8 +112,6 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e1f2c4', end
     height: 100%;
     z-index: 1;
     opacity: 0.5;
-    background-color: rgba(0, 255, 0, 0.5);
-    background-repeat: no-repeat;
     background-position: 50% 0;
     -ms-background-size: cover;
     -o-background-size: cover;
@@ -116,9 +119,10 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e1f2c4', end
     -webkit-background-size: cover;
     background-size: cover;
 }
+
 #contactContainterFluid {
-  position: relative;
-  min-height: 600px;
+    position: relative;
+    min-height: 600px;
 }
 
 #contactContainterFluid:before {
@@ -141,84 +145,164 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e1f2c4', end
 }
 
 .space {
-  position: relative;
-  min-height: 200px;
+    min-height: 200px;
+    background-color: red; // TODO Change in production mode
 }
-
-.space:before {
-    display: block;
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    z-index: 1;
-    opacity: 1;
-    background-color:  rgba(255, 255, 0, 0);
-    background-repeat: no-repeat;
-    background-position: 50% 0;
-    -ms-background-size: cover;
-    -o-background-size: cover;
-    -moz-background-size: cover;
-    -webkit-background-size: cover;
-    background-size: cover;
-}
-
-
 
 body {
-  padding-top: 70px;
+    padding-top: 70px;
 }
 
 .lobster {
-  font-family: Lobster, monospace;
+    font-family: Lobster, monospace;
 }
 
 .tangerine {
-  font-family: Tangerine, monospace;
+    font-family: Tangerine, monospace;
 }
 
+.fantasy {
+    font-weight: 700;
+    letter-spacing: 2px;
+    font-family: fantasy, monospace;
+}
+
+.monaco {
+    font-weight: 800;
+    font-family: Monaco, monospace;
+}
+
+.monospace {
+    font-family: monospace;
+}
 
 navbar {
-  background: transparent;
+    background: transparent;
 }
 
-
 html {
-  font-size: 14px;
+    font-size: 14px;
 }
 
 @include media-breakpoint-up(sm) {
-  html {
-    font-size: 16px;
-  }
+    html {
+        font-size: 16px;
+    }
 }
 
 @include media-breakpoint-up(md) {
-  html {
-    font-size: 20px;
-  }
+    html {
+        font-size: 20px;
+    }
 }
 
 @include media-breakpoint-up(lg) {
-  html {
-    font-size: 28px;
-  }
+    html {
+        font-size: 28px;
+    }
+}
+
+.no-padding-side {
+    padding-left: 0;
+    padding-right: 0;
 }
 
 .no-padding {
-
-  padding-left: 0;
-  padding-right: 0;
+    padding-top: 0;
+    padding-bottom: 0;
+    padding-left: 0;
+    padding-right: 0;
 }
 
-.carousel-inner > .item > img{
-       width:320px;
-       height:240px;
+.no-margin-side {
+    margin-left: 0;
+    margin-right: 0;
+}
+
+.no-margin {
+    margin-top: 0;
+    margin-bottom: 0;
+    margin-left: 0;
+    margin-right: 0;
+}
+
+.no-margin-vertical {
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
+.no-padding-vertical {
+    padding-top: 0;
+    padding-bottom: 0;
+}
+
+.carousel-inner>.item>img {
+    width: 320px;
+    height: 240px;
     margin: 0 auto;
 }
 
-.margin-shifted{
-  margin-top: 15px;
-  margin-bottom: 15px
+.margin-shifted-vertical {
+    margin-top: 15px;
+    margin-bottom: 15px;
+}
+
+.margin-shifted-side {
+    margin-left: 15px;
+    margin-right: 15px;
+}
+
+.margin-shifted {
+    margin-top: 15px;
+    margin-bottom: 15px;
+    margin-left: 15px;
+    margin-right: 15px;
+}
+
+.helvetica {
+    font-size: large;
+    font-weight: bold;
+    letter-spacing: 1px;
+    font-family: Helvetica, sans-serif;
+}
+
+.full {
+    width: 100%;
+    height: 100%;
+}
+
+.flex-col {
+    display: flex;
+    display: -webkit-flex;
+    flex: 1;
+    flex-flow: column nowrap;
+}
+
+.flex-row, .flex-row>div[class*='col-'] {
+    display: -webkit-box;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    flex: 0 auto;
+    height: 100%;
+}
+
+.parent-full {
+    height: 100vh;
+}
+
+.children-full {
+    height: 100vh;
+}
+
+@media (min-width: 992px) {
+    .equal, .equal>div[class*='col-'] {
+        display: -webkit-box;
+        display: -moz-box;
+        display: -ms-flexbox;
+        display: -webkit-flex;
+        display: flex;
+        flex: 1 1 auto;
+    }
 }
