--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,8 @@
     opacity: 0.1;
     filter: alpha(opacity=10);
 }
+
+
 /*.carousel-caption {
     position: relative;
     left: auto;
@@ -60,6 +62,33 @@
 
 .transparent {
     background: transparent;
+}
+
+.verticallyDispatch span {
+    display: block;
+}
+
+.centerVertically {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    border: 1px dashed deeppink;
+}
+
+.centerizedParent {
+    position: absolute;
+    width: 90%;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+.centerizedChildren {
+    position: relative;
+}
+
+.verticalCenterizer {
+    display: flex;
+    align-items: center;
 }
 
 #competencesContainterFluid {
@@ -115,7 +144,7 @@
     top: 0;
     width: 100%;
     height: 100%;
-    z-index: 1;
+    z-index: 0;
     opacity: 0.5;
     background-position: 50% 0;
     -ms-background-size: cover;
@@ -124,7 +153,6 @@
     -webkit-background-size: cover;
     background-size: cover;
 }
-
 
 .space {
     min-height: 200px;
@@ -223,11 +251,10 @@ html {
     padding-bottom: 0;
 }
 
-
 .carousel-inner>.item>img {
-  margin: 0 auto;
-  height: 240px;
-  object-fit: contain;
+    margin: 0 auto;
+    height: 240px;
+    object-fit: contain;
 }
 
 .margin-shifted-vertical {
