--- a/css/caroussel.css
+++ b/css/caroussel.css
@@ -1,75 +1,94 @@
+.carousel-control.left {
+    background: none;
+}
 
-    		.carousel-control.left
-			{
-				background: none;
-			}
-			.carousel-control.right
-			{
-				background: none;
-			}
+.carousel-control.right {
+    background: none;
+}
 
-			.carousel-control
-			{
-				position: absolute;
-				top: 45%;
-				bottom: 0;
-				left: 0;
-				width: 15%;
-				font-size: auto;
-				color: #fff;
-				text-align: center;
-				opacity: 1;
-				text-shadow: none;
-        mix-blend-mode: difference;
-			}
-      .carousel {
-        margin-bottom:50px;
-      }
-			.carousel-control:hover
-			{
-				color: #000;
-			}
-			.carousel-indicators
-			{
-				bottom:0px;
-			}
-			.carousel-indicators li
-			{
-				display: inline-block;
-				width: 10px;
-				height: 10px;
-				margin: 1px;
-				text-indent: -999px;
-				cursor: pointer;
-				border: 1px solid #16a085;
-				border-radius: 50%;
-			}
-			.carousel-indicators .active
-			{
-				width: 12px;
-				height: 12px;
-				margin: 0;
-				background-color: #16a085;
-			}
-			.carousel-caption
-			{
-				position: absolute;
-				right: 0;
-				bottom: 0;
-				left: 0;
-				z-index: 15;
-				padding-top: 20px;
-				padding-bottom: 25px;
-				color: #fff;
-				text-align: center;
+.carousel {
+    margin-bottom: 50px;
+}
 
-        text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.6);
-				/*background: rgba(210, 210, 210, 0.6);*/
-			}
+.carousel-control:hover {
+    color: #fff;
+}
 
-    .captionStyle {
+.carousel-indicators {
+    bottom: -2.5em;
+}
 
-        background : rgba(255, 255, 255, 0.3);
-        padding: 8px 15px;
-        border-radius: 5px;
-    }
+.carousel-indicators>li {
+    cursor: pointer;
+    display: inline-block;
+    width: 0.9em;
+    height: 0.9em;
+    border: 1px solid #16a085;
+    border-radius: 50%;
+}
+
+.carousel-indicators .active {
+    width: 1em;
+    height: 1em;
+    background-color: #16a085;
+    mix-blend-mode: difference;
+}
+
+.carousel-captionCustom {
+    bottom: 0;
+    padding-bottom: 0px;
+    position: absolute;
+    right: 0;
+    left: 0;
+    color: #fff;
+    text-align: center;
+    text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.8);
+}
+
+.captionStyleCustom h3 {
+    padding-top: 0;
+    padding-bottom: 0;
+    margin-top: 0;
+    margin-bottom: 0;
+    background: rgba(180, 180, 180, 0.5);
+    width: inherit;
+    height: 1.5em;
+    line-height: 1.5em;
+}
+
+.caption-label {
+    display: none;
+}
+
+.prev, .next {
+    cursor: pointer;
+    position: absolute;
+    top: 40%;
+    bottom: 40%;
+    height: 4em;
+    line-height: 4.5em;
+    width: auto;
+    margin: 0;
+    text-align: center;
+    padding-left: 1em;
+    padding-right: 1em;
+    font-weight: bold;
+    font-size: 18px;
+    border-radius: 0 3px 3px 0;
+}
+
+.next {
+    right: 0;
+    border-radius: 3px 0 0 3px;
+}
+
+.prev:hover, .next:hover {
+    background-color: rgba(0, 0, 0, 0.8);
+}
+
+.carousel-inner>.item>img {
+    margin: 0 auto;
+    width: 100%;
+    max-height: 300px;
+    object-fit: cover;
+}
