--- a/css/caroussel.css
+++ b/css/caroussel.css
@@ -89,6 +89,7 @@
 .carousel-inner>.item>img {
     margin: 0 auto;
     width: 100%;
+    min-height: 300px;
     max-height: 300px;
     object-fit: cover;
 }
