--- a/css/style.css
+++ b/css/style.css
@@ -385,9 +385,26 @@ html {
 
 @media (max-width: 992px) {
     #game_2048Container {
-        max-height: 700px;
-        min-height: 700px;
-        height: 700px;
+        max-width: 700px;
+        height: 400px;
+        text-align: center;
+    }
+}
+
+@media (max-width: 500px) {
+    #game_2048Container {
+        padding: 0;
+        margin: 0;
+        width: 310px;
+        height: 400px;
+        text-align: center;
+    }
+    #gameContainer {
+        padding: 0;
+    }
+    #game_2048Container iframe {
+        width: 300px;
+        height: 200px;
     }
 }
 
@@ -395,6 +412,7 @@ html {
     #game_2048Container {
         max-height: 400px;
         min-height: 400px;
+        text-align: center;
         height: 400px;
     }
 }
