--- a/includes/game_2048/style/main.css
+++ b/includes/game_2048/style/main.css
@@ -8,9 +8,7 @@ overflow: visible;
   font-family: "Clear Sans", "Helvetica Neue", Arial, sans-serif;
   font-size: 18px; }
 
-body {
-  margin: 80px 0;
-}
+
 
 .heading:after {
   content: "";
@@ -148,7 +146,6 @@ hr {
 .game-container {
   margin-top: 40px;
   position: relative;
-  padding: 15px;
   cursor: default;
   -webkit-touch-callout: none;
   -webkit-user-select: none;
@@ -534,9 +531,7 @@ font-size: 0px;
   html, body {
     font-size: 15px; }
 
-  body {
-    margin: 20px 0;
-    padding: 0 20px; }
+  body { }
 
   h1.title {
     font-size: 27px;
