--- a/css/style.css
+++ b/css/style.css
@@ -385,6 +385,15 @@ html {
 }
 
 @media (max-width: 992px) {
+    #photoParallax{
+      padding-top: 15px;
+      margin-top:15px;
+    }
+
+      .spaceMobile{
+        min-height: 5em;
+      }
+
     #game_2048Container {
         max-width: 700px;
         height: 400px;
@@ -393,6 +402,23 @@ html {
 }
 
 @media (max-width: 500px) {
+  .space {
+      min-height: 5em;
+      /*background-color: red; // TODO Change in production mode*/
+  }
+
+
+  .half-space {
+      min-height: 2em;
+      /*background-color: red; // TODO Change in production mode*/
+  }
+
+
+    #starterContainterFluid{
+          min-height: 200px;
+    }
+
+
     #game_2048Container {
         padding: 0;
         margin: 0;
@@ -437,6 +463,7 @@ html {
     width: 100%;
     height: 1.2em;
     background: transparent;
+    z-index: 20;
 }
 
 .footer * {
